--- a/public/about_corona.html
+++ b/public/about_corona.html
@@ -61,7 +61,7 @@
             <h6 class="collapse-header">코로나 바이러스</h6>
             <a class="collapse-item" href="about_corona.html">코로나 바이러스란?</a>
             <a class="collapse-item" href="prevent_corona.html">코로나 예방법 및 대처법</a>
-            
+
           </div>
         </div>
       </li>
@@ -122,8 +122,8 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">마스크 보급소 위치</h6>
             <a class="collapse-item" href="mask_post_office.html">우체국</a>
-            <a class="collapse-item" href="utilities-border.html">약국</a>
-            <a class="collapse-item" href="utilities-animation.html">온라인 구입</a>
+            <a class="collapse-item" href="https://www.e-gen.or.kr/egen/search_pharmacy.do?searchType=map" target = "_blank">약국</a>
+            <a class="collapse-item" href="https://coronamask.kr/" target = "_blank">온라인 구입</a>
           </div>
         </div>
       </li>
@@ -153,7 +153,7 @@
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="qeustion.html">
           <i class="fas fa-fw fa-comments"></i>
           <span>문의</span></a>
       </li>
@@ -260,7 +260,9 @@
               <br></br>
               <br></br>
               <br></br>
-              <span>Copyright &copy; Corona-19 News 2020</span>
+              <span>Copyright &copy; 코로나 갤러리
+                <br>개발자: <a href="mailto:hyuntak03.lee@gmail.com">hyuntak03.lee@gmail.com</a></br>
+              </span>
             </div>
           </div>
         </footer>
