--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,6 @@
             <h6 class="collapse-header">코로나 바이러스</h6>
             <a class="collapse-item" href="about_corona.html">코로나 바이러스란?</a>
             <a class="collapse-item" href="prevent_corona.html">코로나 예방법 및 대처법</a>
-            <a class="collapse-item" href = "prevent_item.html">예방 물품</a>
           </div>
         </div>
       </li>
@@ -130,8 +129,8 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask"
-          aria-expanded="true" aria-controls="collapseMask">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask" aria-expanded="true"
+          aria-controls="collapseMask">
           <i class="fas fa-fw fa-file-alt"></i>
           <span>마스크 보급 위치</span>
         </a>
@@ -139,8 +138,8 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">마스크 보급소 위치</h6>
             <a class="collapse-item" href="mask_post_office.html">우체국</a>
-            <a class="collapse-item" href="utilities-border.html">약국</a>
-            <a class="collapse-item" href="utilities-animation.html">온라인 구입</a>
+            <a class="collapse-item" href="https://www.e-gen.or.kr/egen/search_pharmacy.do?searchType=map" target = "_blank">약국</a>
+            <a class="collapse-item" href="https://coronamask.kr/" target = "_blank">온라인 구입</a>
           </div>
         </div>
       </li>
@@ -170,7 +169,7 @@
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="qeustion.html">
           <i class="fas fa-fw fa-comments"></i>
           <span>문의</span></a>
       </li>
@@ -947,7 +946,9 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Corona-19 News 2020</span>
+            <span>Copyright &copy; 코로나 갤러리
+              <br>개발자: <a href="mailto:hyuntak03.lee@gmail.com">hyuntak03.lee@gmail.com</a></br>
+            </span>
           </div>
         </div>
       </footer>
