--- a/public/qeustion.html
+++ b/public/qeustion.html
@@ -240,27 +240,19 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <br></br>
-                    <h1 class="h3 mb-1 text-gray-800 text-center">코로나 3법</h1>
+                    <h1 class="h3 mb-1 text-gray-800">문의</h1>
                     <hr class="sidebar-divider d-none d-md-block">
                     <p class="mb-1">
-                        코로나바이러스 감염증-19 (코로나19)의 확산에 대응하기 위해 2020년 2월 26일 국회 본회의에서 의결한 1)감염법 예방·관리법, 2)검역법, 3)의료법 개정안을
-                        말한다.
+                        코로나 갤러리 사이트의 문제점이나 추가 정보를 원하시는 분은 아래의 연락처로 문의해주세요.
                         <br></br>
-                        코로나 3법의 의결로 마스크·손소독제 등 물품의 수출·국외반출을 금지하고 감염취약계층에게 마스크를 우선 지급하고, 코로나19 유행지로부터의 입국을 금지할 수 있는 법적
-                        토대가 마련되게 됐다.
+                        Email: <a href="mailto:hyuntak03.lee@gmail.com">hyuntak03.lee@gmail.com</a>
                         <br></br>
-                        1)감염법 예방·관리법 개정안 - 마스크·손소독제 등 의약외품등의 수출 또는 국외 반출 금지와 벌칙 규정을 마련하는 한편 노인·어린이 등 감염취약계층에 마스크를 지급할 수
-                        있도록 하였다. 또한 감염병 환자로 의심되는 사람에게 감염병병원체 검사 및 자가격리 등 조치를 할 수 있는 근거를 마련하고, 의료인 등이 환자의 해외여행력 정보를
-                        확인하도록의무를 부과했으며, 역학조사관 인력을 확대하였다.
+                        Kakao: <a href = "https://open.kakao.com/o/sjucNs0b">문의하기</a>
                         <br></br>
-                        2)검역법 개정안 - 감염병 발생 지역으로부터 입국하는 자에 대한 입국금지 요청 근거를 마련하여 입국자가 무증상자나 잠복기에 있더라도 해외로부터의 감염병 유입을 방지 할 수
-                        있게 된다. 또한 ICT 기반을 활용한 검역 실시, 권역별 검역체계 구축 등 검역체계 개선에 대한 내용도 개정안에 포함되었다.
-                        <br></br>
-                        3)의료법 개정안 - 의료관련감염의 발생과 원인에 대한 의과학적 감시를 위해 보건복지부장관이 의료관련감염 감시 시스템을 구축·운영하도록 하였다. 아울러 의료기관 휴·폐업 시
-                        진료기록부가 안전하게 보관될 수 있도록 진료기록보관시스템도 구축·운영할 수 있게 하였다.
+                        코로나 갤러리의 모든 코드는 개발자의 깃허브에 올라와 있습니다.
+                        <br><a href="https://github.com/hyuntak03/corona">개발자의 깃허브 방문하기</a></br>
+
                     </p>
-                    <!-- Page body -->
 
                 </div>
                 <!-- End of Main Content -->
@@ -269,6 +261,13 @@
                 <footer class="sticky-footer bg-light">
                     <div class="container my-auto">
                         <div class="copyright text-center my-auto">
+                            <br></br>
+                            <br></br>
+                            <br></br>
+                            <br></br>
+                            <br></br>
+                            <br></br>
+                            <br></br>
                             <br></br>
                             <br></br>
                             <br></br>
