--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -355,7 +355,7 @@
                                             //address += test[i] + '\n';
                                             var km = (dist/1000)
                                             var distance = km.toFixed(1);
-                                            address += marker.getTitle()+" () "+ dist +"km" + "\n";
+                                            address += marker.getTitle()+" ( "+ distance +"km )" + "\n";
                                             console.log(address);
                                             document.getElementById("post_office").innerText = address;
 
@@ -371,6 +371,9 @@
                 <br></br>
                 <hr class="sidebar-divider d-none d-md-block">
                 <h1 class="h3 mb-1 text-gray-800">내 위치 주변 우체국(반경 25km)</h1>
+                <p>정보를 가져오는데 시간이 좀 걸릴수 있습니다.</p>
+                <br></br>
+                <br></br>
                 <p id="post_office"></p>
                 <p class="mb-1">
                 </p>
