--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Corona-19 News</title>
+  <title>코로나 허브</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -45,7 +45,7 @@
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
         </div>
-        <div class="sidebar-brand-text mx-3">코로나-19 뉴스</div>
+        <div class="sidebar-brand-text mx-3">코로나 허브</div>
       </a>
 
       <!-- Divider -->
@@ -404,7 +404,7 @@
                 class="fas fa-download fa-sm text-white-50"></i> Generate Report</a> -->
           </div>
           <hr class="sidebar-divider d-none d-md-block">
-          <div class="text-xs font-weight-bold text-primary text-gray-600 mb-1">코로나-19 뉴스는 질병관리본부 데이터를 사용합니다.</div>
+          <div class="text-xs font-weight-bold text-primary text-gray-600 mb-1">코로나 허브는 질병관리본부 데이터를 사용합니다.</div>
 
           <!-- Content Row -->
           <div class="row">
@@ -921,15 +921,12 @@
               <!-- Approach -->
               <div class="card shadow mb-4">
                 <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Development Approach</h6>
+                  <h6 class="m-0 font-weight-bold text-primary">개발자의 노트</h6>
                 </div>
                 <div class="card-body">
-                  <p>SB Admin 2 makes extensive use of Bootstrap 4 utility classes in order to reduce CSS bloat and
-                    poor
-                    page performance. Custom CSS classes are used to create custom components and custom utility
-                    classes.</p>
-                  <p class="mb-0">Before working with this theme, you should become familiar with the Bootstrap
-                    framework, especially the utility classes.</p>
+                  <p>'코로나 허브'는 코로나-19바이러스와 싸움에 조금이나마 도움이 되고자 만들어졌습니다. 
+                    <br>원래 있던 유용한 사이트들을 한데 모아 더 빠르게 원하는 정보를 찾을 수 있도록 했고, 기존에 없던 우체국 위치 찾기는 만들어 추가하였습니다.</br>
+                    알고 있는 유용한 사이트가 있거나, 공유하고 싶은 좋은 정보가 있다면 문의를 통해 제보해주시기 바랍니다.</p>
                 </div>
               </div>
 
@@ -946,7 +943,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; 코로나 갤러리
+            <span>Copyright &copy; Corona-Hub
               <br>개발자: <a href="mailto:hyuntak03.lee@gmail.com">hyuntak03.lee@gmail.com</a></br>
             </span>
           </div>
