--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>코로나-19 뉴스</title>
+    <title>코로나 허브</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -37,7 +37,7 @@
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon rotate-n-15">
                 </div>
-                <div class="sidebar-brand-text mx-4">코로나-19 뉴스</div>
+                <div class="sidebar-brand-text mx-4">코로나 허브</div>
             </a>
 
             <!-- Divider -->
@@ -399,7 +399,7 @@
                         <br></br>
                         <br></br>
                         <br></br>
-                        <span>Copyright &copy; 코로나 갤러리
+                        <span>Copyright &copy; Corona-Hub
                             <br>개발자: <a href="mailto:hyuntak03.lee@gmail.com">hyuntak03.lee@gmail.com</a></br>
                         </span>
                     </div>
