--- a/public/qeustion.html
+++ b/public/qeustion.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>코로나-19 뉴스</title>
+    <title>코로나 허브</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon rotate-n-15">
                 </div>
-                <div class="sidebar-brand-text mx-4">코로나-19 뉴스</div>
+                <div class="sidebar-brand-text mx-4">코로나 허브</div>
             </a>
 
             <!-- Divider -->
@@ -243,13 +243,13 @@
                     <h1 class="h3 mb-1 text-gray-800">문의</h1>
                     <hr class="sidebar-divider d-none d-md-block">
                     <p class="mb-1">
-                        코로나 갤러리 사이트의 문제점이나 추가 정보를 원하시는 분은 아래의 연락처로 문의해주세요.
+                        Corona-Hub 사이트의 문제점이나 추가 정보를 원하시는 분은 아래의 연락처로 문의해주세요.
                         <br></br>
                         Email: <a href="mailto:hyuntak03.lee@gmail.com">hyuntak03.lee@gmail.com</a>
                         <br></br>
                         Kakao: <a href = "https://open.kakao.com/o/sjucNs0b">문의하기</a>
                         <br></br>
-                        코로나 갤러리의 모든 코드는 개발자의 깃허브에 올라와 있습니다.
+                        Corona-Hub의 모든 코드는 개발자의 깃허브에 올라와 있습니다.
                         <br><a href="https://github.com/hyuntak03/corona">개발자의 깃허브 방문하기</a></br>
 
                     </p>
@@ -281,7 +281,7 @@
                             <br></br>
                             <br></br>
                             <br></br>
-                            <span>Copyright &copy; 코로나 갤러리
+                            <span>Copyright &copy; Corona-Hub
                                 <br>개발자: <a href="mailto:hyuntak03.lee@gmail.com">hyuntak03.lee@gmail.com</a></br>
                             </span>
                         </div>
