--- a/public/korea_situation.html
+++ b/public/korea_situation.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>코로나-19 뉴스</title>
+  <title>코로나 허브</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -399,7 +399,7 @@
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
         </div>
-        <div class="sidebar-brand-text mx-4">코로나-19 뉴스</div>
+        <div class="sidebar-brand-text mx-4">코로나 허브</div>
       </a>
 
       <!-- Divider -->
@@ -426,7 +426,7 @@
             <h6 class="collapse-header">코로나 바이러스</h6>
             <a class="collapse-item" href="about_corona.html">코로나 바이러스란?</a>
             <a class="collapse-item" href="prevent_corona.html">코로나 예방법 및 대처법</a>
-            
+
           </div>
         </div>
       </li>
@@ -487,8 +487,9 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">마스크 보급소 위치</h6>
             <a class="collapse-item" href="mask_post_office.html">우체국</a>
-            <a class="collapse-item" href="https://www.e-gen.or.kr/egen/search_pharmacy.do?searchType=map" target = "_blank">약국</a>
-            <a class="collapse-item" href="https://coronamask.kr/" target = "_blank">온라인 구입</a>
+            <a class="collapse-item" href="https://www.e-gen.or.kr/egen/search_pharmacy.do?searchType=map"
+              target="_blank">약국</a>
+            <a class="collapse-item" href="https://coronamask.kr/" target="_blank">온라인 구입</a>
           </div>
         </div>
       </li>
@@ -627,9 +628,9 @@
               <br></br>
               <br></br>
               <br></br>
-                                          <span>Copyright &copy; 코로나 갤러리
-                                <br>개발자: <a href="mailto:hyuntak03.lee@gmail.com">hyuntak03.lee@gmail.com</a></br>
-                            </span>
+              <span>Copyright &copy; Corona-Hub
+                <br>개발자: <a href="mailto:hyuntak03.lee@gmail.com">hyuntak03.lee@gmail.com</a></br>
+              </span>
             </div>
           </div>
         </footer>
