--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -244,6 +244,8 @@
 
                 <!-- Page Heading -->
                 <h1 class="h3 mb-1 text-gray-800 text-center">국내 마스크 보급 우체국 위치</h1>
+                <p>정보를 가져오는데 시간이 좀 걸릴수 있습니다.</p>
+                <br></br>
                 <div id="container"></div>
                 <div align="center" style="z-index:1">
                     <div id="map" style="width:400px;height:400px; "></div>
@@ -372,7 +374,6 @@
                 <hr class="sidebar-divider d-none d-md-block">
                 <h1 class="h3 mb-1 text-gray-800">내 위치 주변 우체국(반경 25km)</h1>
                 <p>정보를 가져오는데 시간이 좀 걸릴수 있습니다.</p>
-                <br></br>
                 <p id="post_office"></p>
                 <p class="mb-1">
                 </p>
