--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -244,7 +244,7 @@
 
                 <!-- Page Heading -->
                 <h1 class="h3 mb-1 text-gray-800 text-center">국내 마스크 보급 우체국 위치</h1>
-                <p>정보를 가져오는데 시간이 좀 걸릴수 있습니다.</p>
+                <p class = "text-center" >정보를 가져오는데 시간이 좀 걸릴수 있습니다.</p>
                 <br></br>
                 <div id="container"></div>
                 <div align="center" style="z-index:1">
