--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -372,8 +372,8 @@
                 </script>
                 <br></br>
                 <hr class="sidebar-divider d-none d-md-block">
-                <h1 class="h3 mb-1 text-gray-800">내 위치 주변 우체국(반경 25km)</h1>
-                <p>정보를 가져오는데 시간이 좀 걸릴수 있습니다.</p>
+                <h1 class="h3 mb-1 text-gray-800 text-center">내 위치 주변 우체국(반경 25km)</h1>
+                <p class = "text-center">정보를 가져오는데 시간이 좀 걸릴수 있습니다.</p>
                 <p id="post_office"></p>
                 <p class="mb-1">
                 </p>
