--- a/public/korea_situation.html
+++ b/public/korea_situation.html
@@ -409,7 +409,7 @@
       <li class="nav-item">
         <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>코로나-19 현재 상황</span></a>
+          <span>메인 화면</span></a>
       </li>
 
       <!-- Divider -->
