--- a/public/prevent_corona.html
+++ b/public/prevent_corona.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>코로나-19 뉴스</title>
+  <title>코로나 허브</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
         </div>
-        <div class="sidebar-brand-text mx-4">코로나-19 뉴스</div>
+        <div class="sidebar-brand-text mx-4">코로나 허브</div>
       </a>
 
       <!-- Divider -->
@@ -44,7 +44,7 @@
       <li class="nav-item">
         <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>코로나-19 현재 상황</span></a>
+          <span>메인 화면</span></a>
       </li>
 
       <!-- Divider -->
