--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="코로나 바이러스 정보 모음집 사이트입니다.">
   <meta name="author" content="">
 
   <title>코로나 허브</title>
