--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -366,6 +366,8 @@
                                 } else {
                                     alert("현재 위치 정보를 가져오는데 실패했습니다.")
                                 }
+                            }else {
+                                alert("https로 접속해주세요")
                             }
                         });
                     }
