--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -318,8 +318,58 @@
                         , '송호로 7', '용화양강로 11 - 9', '학산영동로 837', '회인로1길 4', '삼승탄부로 7', '법주사로 274', '남부로 6268', '사담길 25', '하장3길 6 - 6'
                         , '장안로 10 - 7', '후평바리미길 6', '구티1길 15', '관기송현로 128']
 
-                    for (var i = 0; i <= 1406; i++) {
-                        geocoder.addressSearch(test[i], function (result, status) {
+                    // for (var i = 0; i <= 1406; i++) {
+                        geocoder.addressSearch('경상감영길 80', '동촌로 1', '서대구로 97', '구암로65길 38', '학산로 65'
+                        , '달구벌대로 2320', '비슬로130길 7', '중앙대로 200', '원대로 60', '성서로 406', '대봉로 224'
+                        , '중앙대로 265', '중앙대로22길 269', '대명로 79', '동덕로 167', '태평로 177', '남산로 79', '현충로 163'
+                        , '달구벌대로 2141', '경안로 780', '송라로 11', '팔공로 47길 22', '화랑로25길 13', '동부로30길 12-1', '동촌로 242'
+                        , '동호로 63', '안심로16길 49', '신암로 76', '팔공로 1017', '큰장로 101', '달서로 157', '서대구로 358', '평리로 148'
+                        , '국채보상로 279', '통학로 58', '칠곡중앙대로 577', '팔달로 195', '연암로 42', '경진로 5', '구암로15길 16', '동천로 3'
+                        , '유통단지로 115', '호국로43길 17', '전로 74', '비슬로 2589', '상원로 97', '성당로 247', '당산로 36', '송현로 47'
+                        , '월배로 32', '상인서로10길 6-4', '선원로 58', '성서공단로 118', '도원로 6', '용산로 214', '장기로 273', '화암로 76'
+                        , '호산로 124', '왕선로 39', '하빈로90길 1', '달구벌대로 1578-11', '청수로 243', '파동로 49', '달구벌대로 2465'
+                        , '들안로 137', '동대구로 401', '수성로 82', '국채보상로 1075', '지범로 149, 범안로16길 6', '달구벌대로 3182'
+                        , '동대구로 364', '달구벌대로 3070', '가창로216길 1', '논공중앙로33길 9', '비슬로366길 3', '비슬로64길 52-4'
+                        , '창리로11길 18', '비슬로 2302', '유천길 73', '헐티로 233', '선암로 612', '학산1길 8', '청려로 3689'
+                        , '도주관로 151', '청려로 4725', '각남로 89', '헐티로 806'
+                        , '동문길 49', '노서길 10', '상북로 288', '송현길 64', '대밀길 22 - 2', '중남로 45', '남창2길 20', '덕신로 244'
+                        , '신암해안길 55', '덕하장터길 9', '곡천동문길 5', '삼계로 30', '중리공단로 225 - 1', '동부로 1941', '동부로609번길 10'
+                        , '광제산로 17', '진의로 1090', '순환로 370', '월아산로 115', '곤수로 977', '오봉산로 707', '진산로 1824', '지수로 488'
+                        , '사군로 51', '동부로 1316', '진산로 529', '한들길 52', '금산순환로 40', '주남로 574 - 4', '의창대로915번길 7', '신리길 20'
+                        , '서부로 15', '한림로 370', '대동로 615', '상동로 557', '송현로 11', '서부로1638번길 4', '마사로 91', '새실로 36', '신평로 11 - 2'
+                        , '신주로 41', '남양산1길 30', '상북중앙로 400', '원동마을길 20', '영천로 79', '하청로 30', '지세포로 104', '읍내로2길 18', '동부로 18'
+                        , '성포로 144', '외포4길 8', '옥포대첩로 1595 - 1', '하둔길 67 - 1', '남부해안로 56', '거제북로 42 - 1', '산양중앙로 73', '중촌길 176'
+                        , '한산일주로 841 - 1', '진촌2길 6 - 23', '도산일주로 32', '죽림3로 27', '남해안대로 442', '좌천로 13 - 3', '삼성1길 6 - 6', '모전1길 6 - 3'
+                        , '길천2길 5 - 1', '철마로 475 - 1', '정관덕산2길 14', '가조가야로 1082', '원학길 359', '덕유월성로 2309', '중앙로2길 13', '웅양로 1429'
+                        , '신차로 3073', '입석2길 8', '빼재로 14', '수남로 1842', '당대고개길 1', '용암로 7', '영서로 93', '거류로 648', '배둔로28번길 6', '척번정1길 95'
+                        , '구절로 754', '영산1길 18', '미룡2길 42', '대가로 551', '공룡로 7', '자란만로 1723 - 44', '대가로 1675 - 9', '옥천로 1275 - 1', '옥천로 251670 - 16'
+                        , '미송로 68', '무림로 50', '동부대로1876번길 10', '남서대로 779', '남해대로675번길 8 - 7', '창선로 112', '남서대로 1661', '탑동로 53'
+                        , '설천로 696', '진북산업로 1', '지산5길 65', '대실로 145', '금암길 11', '천태로 11', '수산중앙로 52', '사명로 511', '표충로 355'
+                        , '산내로 352', '산외로 702 - 1', '평촌중앙로 34', '초동로 304', '부북로 41', '상동로 596 - 1', '청도로 106', '경서대로 3421'
+                        , '곤양로 103 - 1', '서포로 295', '진삼로 636', '상정대로 2540 - 49', '길평길 37', '진삼로 1130', '새실로 7', '목화로 977'
+                        , '신등가회로 30', '남명로 206', '친환경로 3582', '동의보감로 1058', '원지강변로63번길', '비량로 49', '덕산대포로 262', '오동로 651'
+                        , '용포로 56', '운주산로 1208 - 1', '부촌길 42', '장척로 408 - 4', '소정구길 110', '새내12길 3', '청연로 602 ', '당산로 342'
+                        , '전동로 3', '남문2로 117', '성연로 210 - 10', '운암로 1005', '구진천로 22 - 3', '무학로 1683', '고북1로 258'
+                        , '취평2길 30 - 1', '운암로 361 - 3', '팔봉1로 405 - 1', '화천1로 96', '읍내로 61', '마전로 52', '진악로 23'
+                        , '복수로 91', '금산로 518', '금강로 111', '군북로 717', '현내로 95', '진산로 361', '홍남로 683', '구성남로 1'
+                        , '갈산로 98 - 1', '구항길 45', '이호1길 13', '금북로 16', '광금남로 719', '홍남동로474번길 1', '은하로 249'
+                        , '홍북로 447', '삽교로1길 16', '고덕중앙로 52', '예당로 177', '봉운로 33', '주교로 74 - 1', '신례원로 183'
+                        , '청신로 412', '응봉로 148', '오가중앙로 39', '대술로 123', '추사로 110', '의좋은형제길 25 - 4', '구암길 2'
+                        , '비인로201번길 2', '한마로 72', '신창동로 28', '종판로901번길 5', '옥포길8번길 10', '삼일로 276 - 1', '신농길 23'
+                        , '기산길 62', '신월길 17', '서문로 784', '장서로 695 - 4', '충서로460번길 3', '버그내1길 113 ', '한천로 871', '기지시1길 49'
+                        , '정미로 706 - 1', '신평로 837', '송악로 662', '통정3길 7', '상거중앙길 63 - 1', '남부로 1154', '고대로 20', '면천로 1783'
+                        , '4.4만세로 37', '효자길 7', '무한로 94', '닭우리고개길 30 - 17', '만수로 1604', '안심길 164 - 1', '명덕로 247', '청신로 874'
+                        , '충절로 1985', '칠갑산로 517', '동헌로 23', '규암로 5', '성흥로 119', '충절로 2794', '입포로53번길 3', '외산로 96', '증산로39번길 7'
+                        , '흥수로 105', '세도중앙로 34', '초촌로 20', '남성로 430', '장암로 18', '대백제로 336', '팔충로 772', '성충로 1008', '장터7길 5', '충청수영로 825'
+                        , '원산도3길 398', '보령읍성길 80 - 19', '청소큰길 185', '만수로 1102', '충서로 1839 - 8', '성주중앙길 39', '충서로 411 - 7', '장터로 157'
+                        , '근흥로 706 - 4', '빗독1길 37', '원이로 844', '천리포1길 10', '신덕길 11 - 1', '남면로 104', '분지길 7', '단양로 1917', '온달평강로 64'
+                        , '월악로 4664', '금수산로 961', '남한강로 528', '어상천로 941', '중앙로 208', '중앙로 18 - 1', '괴산로 1351', '목도로 44', '청안읍내로 36'
+                        , '화성로 55', '도정로 57', '소수로 146 - 1', '감물로 65', '미선로 754', '미선로 754', '모래재로 340', '중리3길 17', '몽촌2길 3', '송림4길 10 - 5'
+                        , '초동로 7', '봉죽길 14', '장터길 7 - 7', '지전길 50 - 9', '묘목로 105', '현리길 85', '성왕로 498', '연주길 46', '산계길 82', '이백길 3 - 7'
+                        , '평산4길 6', '금석로107번길 2 - 2', '덕호로 3 - 1', '음성로 1659', '꽃동네길 23', '소이로 354', '장성2길 17', '오태로 80 - 6', '덕금로 413 - 1'
+                        , '장감로126번길 2', '추풍령로 461', '심천로 82 - 1', '영동황간로 1665', '민주지산로 3025', '서산로 22', '용산로 318 - 1', '계산로 44', '노천5길 4'
+                        , '송호로 7', '용화양강로 11 - 9', '학산영동로 837', '회인로1길 4', '삼승탄부로 7', '법주사로 274', '남부로 6268', '사담길 25', '하장3길 6 - 6'
+                        , '장안로 10 - 7', '후평바리미길 6', '구티1길 15', '관기송현로 128', function (result, status) {
                             //console.log(test[i])
                             //console.log(result[0].address_name)
                             // 정상적으로 검색이 완료됐으면 
@@ -370,7 +420,7 @@
                                 alert("https로 접속해주세요")
                             }
                         });
-                    }
+                    // }
                 </script>
                 <br></br>
                 <hr class="sidebar-divider d-none d-md-block">
