--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -246,7 +246,6 @@
                 <h1 class="h3 mb-1 text-gray-800 text-center">국내 마스크 보급 우체국 위치</h1>
                 <p class = "text-center" >정보를 가져오는데 시간이 좀 걸릴수 있습니다.</p>
                 <p class = "text-center">(목록이 뜨지 않을시 <a href="https://www.corona-hub.kr">https</a> 로 다시 접속해주세요.)</p>
-                <br></br>
                 <div id="container"></div>
                 <div align="center" style="z-index:1">
                     <div id="map" style="width:400px;height:400px; "></div>
@@ -365,10 +364,10 @@
                                         }
                                     })
                                 } else {
-                                    alert("현재 위치 정보를 가져오는데 실패했습니다.")
+                                    //alert("현재 위치 정보를 가져오는데 실패했습니다.")
                                 }
                             }else {
-                                alert("https로 접속해주세요")
+                                //alert("https로 접속해주세요")
                             }
                         });
                     }
