--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script data-ad-client="ca-pub-4358965198936727" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <!-- 
   <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
