--- a/public/index.html
+++ b/public/index.html
@@ -936,6 +936,7 @@
 
         </div>
         <!-- /.container-fluid -->
+        <script data-ad-client="ca-pub-4358965198936727" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
       </div>
       <!-- End of Main Content -->
