--- a/public/index.html
+++ b/public/index.html
@@ -585,7 +585,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-1 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-primary">국내 코로나-19 확진자 증가 추세(제작중)</h6>
+                  <h6 class="m-0 font-weight-bold text-primary">지금까지의 코로나 바이러스 사건들(제작중)</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">
@@ -737,30 +737,6 @@
                     <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="40"
                       aria-valuemin="0" aria-valuemax="6"></div>
                   </div>
-                  <h4 class="small font-weight-bold">이란<span class="float-right">
-                      <script type="text/javascript" language="javascript">
-                        $.ajax({
-                          type: "GET",
-                          url: "https://corona-data.herokuapp.com/iran",
-                          dataType: "text",
-                          success: function (text) {
-                            //console.log(text)
-                            document.getElementById("iran").innerText = text
-                            infected = text;
-                            console.log(infected)
-                            //document.write(text)
-                          },
-                          error: function (xhr, status, error) {
-                            console.log(error)
-                          }
-                        })
-                      </script>
-                      <a id="iran"></a>
-                    </span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar" role="progressbar" style="width: 2.7%" aria-valuenow="60"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
                   <h4 class="small font-weight-bold">이탈리아<span class="float-right">
                       <script type="text/javascript" language="javascript">
                         $.ajax({
@@ -780,6 +756,30 @@
                         })
                       </script>
                       <a id="italy"></a>
+                    </span></h4>
+                  <div class="progress mb-4">
+                    <div class="progress-bar" role="progressbar" style="width: 2.7%" aria-valuenow="60"
+                      aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <h4 class="small font-weight-bold">이란<span class="float-right">
+                      <script type="text/javascript" language="javascript">
+                        $.ajax({
+                          type: "GET",
+                          url: "https://corona-data.herokuapp.com/iran",
+                          dataType: "text",
+                          success: function (text) {
+                            //console.log(text)
+                            document.getElementById("iran").innerText = text
+                            infected = text;
+                            console.log(infected)
+                            //document.write(text)
+                          },
+                          error: function (xhr, status, error) {
+                            console.log(error)
+                          }
+                        })
+                      </script>
+                      <a id="iran"></a>
                     </span></h4>
                   <div class="progress mb-4">
                     <div class="progress-bar bg-info" role="progressbar" style="width: 2.6%" aria-valuenow="80"
@@ -993,10 +993,10 @@
   <script src="js/sb-admin-2.min.js"></script>
 
   <!-- Page level plugins -->
-  <script src="vendor/chart.js/Chart.min.js"></script>
+  <!-- <script src="vendor/chart.js/Chart.min.js"></script> -->
 
   <!-- Page level custom scripts -->
-  <script src="js/demo/chart-area-demo.js"></script>
+  <!-- <script src="js/demo/chart-area-demo.js"></script> -->
   <!-- <script src="js/demo/chart-pie-demo.js"></script> -->
 
 
