--- a/public/qeustion.html
+++ b/public/qeustion.html
@@ -130,7 +130,7 @@
                         <h6 class="collapse-header">마스크 보급소 위치</h6>
                         <a class="collapse-item" href="mask_post_office.html">우체국</a>
                         <a class="collapse-item" href="https://www.e-gen.or.kr/egen/search_pharmacy.do?searchType=map" target = "_blank">약국</a>
-                        <a class="collapse-item" href="https://coronamask.kr/" target = "_blank">온라인 구입</a>
+                        <a class="collapse-item" href="https://coronamask.kr/" target = "_blank">온라인 구입(코로나마스크)</a>
                     </div>
                 </div>
             </li>
@@ -156,6 +156,25 @@
                         <a class="collapse-item"
                             href="https://www.worldvision.or.kr/business/dataCenter/worldNews/worldNews_view.asp?b_seq=12775&mcode=2889&EKAMS=naver.900.5798.20591.2043441.617933200&utm_source=naver&trackingDays=30&utm_medium=cpc&utm_campaign=searchad&utm_term=%EC%BD%94%EB%A1%9C%EB%82%98%EA%B8%B0%EB%B6%80&utm_content=K&n_media=27758&n_query=%EC%BD%94%EB%A1%9C%EB%82%98%EA%B8%B0%EB%B6%80&n_rank=3&n_ad_group=grp-a001-01-000000014381332&n_ad=nad-a001-01-000000087023905&n_keyword_id=nkw-a001-01-000002732976554&n_keyword=%EC%BD%94%EB%A1%9C%EB%82%98%EA%B8%B0%EB%B6%80&n_campaign_type=1&NaPm=ct%3Dk7bzlgk0%7Cci%3D0BHJ001EojTs2fkJbvo6%7Ctr%3Dsa%7Chk%3D9ca08e2fb4f0dc0e2b54805a5904ddf2e1d06e51"
                             target="_">월드비전</a>
+                    </div>
+                </div>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask"
+                    aria-expanded="true" aria-controls="collapseMask">
+                    <i class="fas fa-fw fa-file-alt"></i>
+                    <span>기타 현황 사이트</span>
+                </a>
+                <div id="collapseMask" class="collapse" aria-labelledby="headingUtilities"
+                    data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">현황,발생 추이 확인가능</h6>
+                        <a class="collapse-item" href="http://livecorona.co.kr/" target="_blank">라이브 코로나맵</a>
+                        <a class="collapse-item" href="https://www.coronanow.kr/" target="_blank">코로나나우</a>
+                        <a class="collapse-item" href="https://wuhanvirus.kr/" target="_blank">코로나19 실시간 상황판</a>
+                        <a class="collapse-item" href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6" target="_blank">존 홉킨스 대학 세계 현황</a>
+                        
                     </div>
                 </div>
             </li>
