--- a/public/korea_situation.html
+++ b/public/korea_situation.html
@@ -20,7 +20,8 @@
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
-  <script data-ad-client="ca-pub-4358965198936727" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script data-ad-client="ca-pub-4358965198936727" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script src="https://code.highcharts.com/maps/highmaps.js"></script>
   <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
   <script src="https://code.highcharts.com/mapdata/countries/kr/kr-all.js"></script>
@@ -490,7 +491,7 @@
             <a class="collapse-item" href="mask_post_office.html">우체국</a>
             <a class="collapse-item" href="https://www.e-gen.or.kr/egen/search_pharmacy.do?searchType=map"
               target="_blank">약국</a>
-            <a class="collapse-item" href="https://coronamask.kr/" target="_blank">온라인 구입</a>
+            <a class="collapse-item" href="https://coronamask.kr/" target="_blank">온라인 구입(코로나마스크)</a>
           </div>
         </div>
       </li>
@@ -517,6 +518,25 @@
           </div>
         </div>
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask"
+            aria-expanded="true" aria-controls="collapseMask">
+            <i class="fas fa-fw fa-file-alt"></i>
+            <span>기타 현황 사이트</span>
+        </a>
+        <div id="collapseMask" class="collapse" aria-labelledby="headingUtilities"
+            data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+                <h6 class="collapse-header">현황,발생 추이 확인가능</h6>
+                <a class="collapse-item" href="http://livecorona.co.kr/" target="_blank">라이브 코로나맵</a>
+                <a class="collapse-item" href="https://www.coronanow.kr/" target="_blank">코로나나우</a>
+                <a class="collapse-item" href="https://wuhanvirus.kr/" target="_blank">코로나19 실시간 상황판</a>
+                <a class="collapse-item" href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6" target="_blank">존 홉킨스 대학 세계 현황</a>
+                
+            </div>
+        </div>
+    </li>
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
