--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>메인 화면</span></a>
+          <span>종합 상황</span></a>
       </li>
 
       <!-- Divider -->
@@ -419,7 +419,7 @@
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">메인 화면</h1>
+            <h1 class="h3 mb-0 text-gray-800">종합 상황</h1>
             <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                 class="fas fa-download fa-sm text-white-50"></i> Generate Report</a> -->
           </div>
