--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -49,7 +49,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-chart-area"></i>
-                    <span>메인 화면</span></a>
+                    <span>종합 상황</span></a>
             </li>
 
             <!-- Divider -->
@@ -167,12 +167,12 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask"
-                    aria-expanded="true" aria-controls="collapseMask">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSite"
+                    aria-expanded="true" aria-controls="collapseSite">
                     <i class="fas fa-fw fa-file-alt"></i>
                     <span>기타 현황 사이트</span>
                 </a>
-                <div id="collapseMask" class="collapse" aria-labelledby="headingUtilities"
+                <div id="collapseSite" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">현황,발생 추이 확인가능</h6>
