--- a/public/qeustion.html
+++ b/public/qeustion.html
@@ -44,7 +44,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-chart-area"></i>
-                    <span>메인 화면</span></a>
+                    <span>종합 상황</span></a>
             </li>
 
             <!-- Divider -->
