--- a/public/korea_situation.html
+++ b/public/korea_situation.html
@@ -617,11 +617,11 @@
 
           <!-- Page Heading -->
           <h1 class="h3 mb-1 text-gray-800 text-center">국내 지역별 확진자수</h1>
-          <div class="text-xs font-weight-bold text-primary text-gray-600 mb-1">데이터를 가져오는데 조금 시간이 걸릴수도 있습니다.</div>
+          <div class="text-xs font-weight-bold text-primary text-gray-600 mb-1 text-center">데이터를 가져오는데 조금 시간이 걸릴수도 있습니다.</div>
           <div id="container"></div>
           <hr class="sidebar-divider d-none d-md-block">
           <!-- <h1 class="h3 mb-1 text-gray-800">제목</h1> //800 의미는 글씨 진하기 -->
-          <div class="text-center">
+          <div align="center">
             <script>
               test()
             </script>
